@@ -1,4 +1,6 @@
 ver 0.20.13 (not yet released)
+* output
+  - osx: set up ring buffer to hold at least 100ms
 * database
   - simple: don't purge mount points on update/rescan
   - simple: fix "mount" bug caused by bad compiler optimization
